--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.2
   percent_indicator: ^4.2.3
+  fl_chart: ^0.61.0
 
 dev_dependencies:
   flutter_test:
