tinggal akses ke api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.2
   percent_indicator: ^4.2.3
   fl_chart: ^0.61.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
