--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   jiffy: ^6.1.0
   path_provider: ^2.0.15
   permission_handler: ^10.2.0
+  flutter_custom_tabs: ^1.0.4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
