kegiatan PPPK, Internal, eksternal, done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_custom_tabs: ^1.0.4
   cached_network_image: ^3.2.3
+  syncfusion_flutter_charts: ^21.2.6
+  whatsapp_share: ^2.0.1
 
 dev_dependencies:
   flutter_test:
