--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cached_network_image: ^3.2.3
   syncfusion_flutter_charts: ^21.2.6
   whatsapp_share: ^2.0.1
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   flutter_test:
