--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="id.go.kotasemarang.dinkes.my_darling_app">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -13,7 +14,10 @@
    <application
         android:label="my_darling_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
+        android:icon="@mipmap/ic_launcher"
+        tools:targetApi="n">
         <activity
             android:name=".MainActivity"
             android:exported="true"
