--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_custom_tabs: ^1.0.4
   cached_network_image: ^3.2.3
-  syncfusion_flutter_charts: ^21.2.6
   whatsapp_share: ^2.0.1
   flutter_local_notifications: ^14.1.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
