--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.2
   percent_indicator: ^4.2.3
-  fl_chart: ^0.62.0
+  fl_chart: ^0.63.0
   http: ^0.13.5
   shared_preferences: ^2.0.18
-  sensors_plus: ^2.0.2
+  sensors_plus: ^3.0.2
   intl: ^0.18.0
   sqflite: ^2.2.6
   path: ^1.8.2
-  pedometer: ^3.0.0
+  pedometer: ^4.0.1
   hive: ^2.2.3
   flutter_foreground_service: ^0.3.0
   jiffy: ^6.1.0
@@ -55,6 +55,8 @@ dependencies:
   whatsapp_share: ^2.0.1
   flutter_local_notifications: ^14.1.1
   url_launcher: ^6.1.11
+  webview_flutter: ^4.2.2
+  flutter_cached_pdfview: ^0.4.1
 
 dev_dependencies:
   flutter_test:
