--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,14 +49,14 @@ dependencies:
   flutter_foreground_service: ^0.3.0
   jiffy: ^6.1.0
   path_provider: ^2.0.15
+  provider: ^6.0.0
   permission_handler: ^10.2.0
   flutter_custom_tabs: ^1.0.4
   cached_network_image: ^3.2.3
   whatsapp_share: ^2.0.1
-  flutter_local_notifications: ^14.1.1
   url_launcher: ^6.1.11
-  webview_flutter: ^4.2.2
   flutter_cached_pdfview: ^0.4.1
+  awesome_notifications: ^0.6.19
 
 dev_dependencies:
   flutter_test:
