--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,9 @@ dependencies:
   whatsapp_share: ^2.0.1
   url_launcher: ^6.1.11
   flutter_cached_pdfview: ^0.4.1
-  awesome_notifications: ^0.6.19
+  flutter_local_notifications: ^15.0.1
+  device_info_plus: ^9.0.2
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
