--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   timezone: ^0.9.2
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.1.39
+  fluttertoast: ^8.2.2
+  flutter_foreground_task: ^6.0.0+1
 
 dev_dependencies:
   flutter_test:
