tambah button disposisi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_foreground_task: ^6.0.0+1
   connectivity_plus: ^4.0.1
   datepicker_dropdown: ^0.0.7+5
+  flutter_background_service: ^3.0.1
 
 dev_dependencies:
   flutter_test:
