--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <!-- For apps with targetSDK=31 (Android 12) -->
    <application
-        android:label="my_darling_app"
+        android:label="MyDarling"
         android:name="${applicationName}"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
