--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   shared_preferences: ^2.0.18
   sensors_plus: ^3.0.2
   intl: ^0.18.0
-  sqflite: ^2.2.6
   path: ^1.8.2
   pedometer: ^4.0.1
   hive: ^2.2.3
@@ -61,11 +60,11 @@ dependencies:
   timezone: ^0.9.2
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.1.39
-  fluttertoast: ^8.2.2
   flutter_foreground_task: ^6.0.0+1
   connectivity_plus: ^4.0.1
   datepicker_dropdown: ^0.0.7+5
-  flutter_background_service: ^3.0.1
+#  flutter_background_service: ^3.0.1
+  workmanager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
