--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,12 @@ dependencies:
   timezone: ^0.9.2
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.1.39
-  flutter_foreground_task: ^6.0.0+1
+#  flutter_foreground_task: ^6.0.0+1
   connectivity_plus: ^4.0.1
   datepicker_dropdown: ^0.0.7+5
 #  flutter_background_service: ^3.0.1
   workmanager: ^0.5.1
+  webview_flutter: ^4.2.4
 
 dev_dependencies:
   flutter_test:
