--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
 #  flutter_background_service: ^3.0.1
   workmanager: ^0.5.1
   webview_flutter: ^4.2.4
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
