--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   path: ^1.8.2
   pedometer: ^4.0.1
   hive: ^2.2.3
-#  flutter_foreground_service: ^0.4.0
   jiffy: ^6.1.0
   path_provider: ^2.0.15
   provider: ^6.0.0
@@ -55,19 +54,16 @@ dependencies:
   whatsapp_share: ^2.0.1
   url_launcher: ^6.1.11
   flutter_cached_pdfview: ^0.4.1
-  flutter_local_notifications: ^15.0.1
+#  flutter_local_notifications: ^15.0.1
   device_info_plus: ^9.0.2
   timezone: ^0.9.2
   flutter_barcode_scanner: ^2.0.0
   syncfusion_flutter_charts: ^22.1.39
-#  flutter_foreground_task: ^6.0.0+1
   connectivity_plus: ^4.0.1
   datepicker_dropdown: ^0.0.7+5
-#  flutter_background_service: ^3.0.1
   workmanager: ^0.5.1
   webview_flutter: ^4.2.4
-  flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
+  awesome_notifications: ^0.6.19
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +75,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
