add local database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   workmanager: ^0.5.1
   webview_flutter: ^4.2.4
   awesome_notifications: ^0.6.19
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
