--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'id.go.kotasemarang.dinkes.my_darling_app'
 }
 
 flutter {
