--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   whatsapp_share: ^2.0.1
   url_launcher: ^6.1.11
   flutter_cached_pdfview: ^0.4.1
-#  flutter_local_notifications: ^15.0.1
+  flutter_local_notifications: ^15.0.1
   device_info_plus: ^9.0.2
   timezone: ^0.9.2
   flutter_barcode_scanner: ^2.0.0
@@ -63,8 +63,10 @@ dependencies:
   datepicker_dropdown: ^0.0.7+5
   workmanager: ^0.5.1
   webview_flutter: ^4.2.4
-  awesome_notifications: ^0.6.19
   hive_flutter: ^1.1.0
+  flutter_foreground_task: ^6.1.1
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
