--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,7 @@ dependencies:
   webview_flutter: ^4.2.4
   hive_flutter: ^1.1.0
   flutter_foreground_task: ^6.1.1
-  flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
+  android_alarm_manager_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
