--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_foreground_task: ^6.1.1
   android_alarm_manager_plus: ^3.0.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
