--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   datepicker_dropdown: ^0.0.7+5
   webview_flutter: ^4.2.4
   hive_flutter: ^1.1.0
-  android_alarm_manager_plus: ^3.0.2
+#  android_alarm_manager_plus: ^3.0.2
   badges: ^3.1.2
   json_annotation: ^4.8.1
 
